Test/git-issues/git-issue-854.dfy.expect
git-issue-854.dfy(11,31): Error: expression is not allowed to invoke a lemma (l)
git-issue-854.dfy(11,32): Error: lemma call is not allowed to be used in an expression context (l)
2 resolution/type errors detected in git-issue-854.dfy
